Provide refresh token on login
