# Saitynas_API/Controllers/AuthController.cs
@@ -1,16 +1,10 @@
-using System.Linq;
 using System.Threading.Tasks;
 using Microsoft.AspNetCore.Authorization;
-using Microsoft.AspNetCore.Identity;
 using Microsoft.AspNetCore.Mvc;
 using Saitynas_API.Models;
-using Saitynas_API.Models.Authentication;
 using Saitynas_API.Models.Authentication.DTO;
 using Saitynas_API.Models.Authentication.DTO.Validator;
-using Saitynas_API.Models.Common;
-using Saitynas_API.Models.UserEntity;
 using Saitynas_API.Services.AuthenticationService;
-using Saitynas_API.Services.JwtService;
 
 namespace Saitynas_API.Controllers
 {
@@ -22,16 +16,16 @@ namespace Saitynas_API.Controllers
         protected override string ModelName => "user";
 
         private readonly ISignupDTOValidator _validator;
-        private readonly UserManager<User> _userManager;
         private readonly IAuthenticationService _authService;
-        private readonly IJwtService _jwt;
 
-        public AuthController(ApiContext context, ISignupDTOValidator validator, UserManager<User> userManager, IAuthenticationService authService, IJwtService jwt) : base(context)
+        public AuthController(
+            ApiContext context,
+            ISignupDTOValidator validator,
+            IAuthenticationService authService
+        ) : base(context)
         {
             _validator = validator;
-            _userManager = userManager;
             _authService = authService;
-            _jwt = jwt;
         }
 
         [HttpPost("signup")]
@@ -39,7 +33,7 @@ namespace Saitynas_API.Controllers
         public async Task<ActionResult<AuthenticationDTO>> Signup([FromBody] SignupDTO requestDto)
         {
             _validator.ValidateSignupDTO(requestDto);
-            
+
             var responseDto = await _authService.Signup(requestDto);
 
             return ApiCreated(responseDto);
@@ -47,26 +41,11 @@ namespace Saitynas_API.Controllers
 
         [HttpPost("login")]
         [AllowAnonymous]
-        public async Task<ActionResult<object>> Login([FromBody] LoginDTO dto)
+        public async Task<ActionResult<AuthenticationDTO>> Login([FromBody] LoginDTO requestDto)
         {
-            var user = await _userManager.FindByEmailAsync(dto.Email);
+            var responseDto = await _authService.Login(requestDto);
 
-            if (user == null) return ApiBadRequest(ApiErrorSlug.InvalidCredentials);
-            if (!await _userManager.CheckPasswordAsync(user, dto.Password))
-            {
-                return ApiBadRequest(ApiErrorSlug.InvalidCredentials);
-            }
-
-            string token = GenerateAccessToken(user);
-            return Ok(new
-            {
-                jwt = token
-            });
-        }
-
-        private string GenerateAccessToken(User user)
-        {
-            return _jwt.GenerateSecurityToken(new JwtUser(user.Email, user.RoleId));
+            return ApiCreated(responseDto);
         }
     }
 }
