# swagger.json
@@ -103,7 +103,14 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AuthenticationDTO"
+                }
+              }
+            }
           }
         }
       }
